Closed Bug 213611 Opened 23 years ago Closed 23 years ago

comment lies: looping macro does not handle observers removing themselves in nsImageLoadingContent

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timwatt, Assigned: timwatt)

References

()

Details

Attachments

(1 file)

Patch coming up.
Attachment #128370 - Flags: review?(bzbarsky)
Comment on attachment 128370 [details] [diff] [review] Fix the code to match the comment r+sr=bzbarsky
Attachment #128370 - Flags: superreview+
Attachment #128370 - Flags: review?(bzbarsky)
Attachment #128370 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
As long as observers don't try to remove each other ;-)
Product: Core → Core Graveyard
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: