Make the loop actually deal with observers removing themselves.  Bug 213611, patch by riceman+bmo@mail.rit.edu (Tim), r+sr=bzbarsky